--- a/frontend/stylesheets/components/_btn-toggle.scss
+++ b/frontend/stylesheets/components/_btn-toggle.scss
@@ -17,8 +17,8 @@
     pointer-events: none;
 
     &,
-    &:before,
-    &:after {
+    &::before,
+    &::after {
       width: sizing.rem(26px);
       height: sizing.rem(2px);
       border-radius: 2px;
@@ -28,18 +28,18 @@
       transition-timing-function: variables.$base-animation-timing;
     }
 
-    &:before,
-    &:after {
+    &::before,
+    &::after {
       position: absolute;
       content: '';
     }
 
-    &:before {
+    &::before {
       top: -9px;
       left: 0;
     }
 
-    &:after {
+    &::after {
       top: 9px;
       left: 0;
     }
@@ -48,11 +48,11 @@
   &:has(input:checked) &__icon {
     width: 0;
 
-    &:before {
+    &::before {
       transform: translateY(9px) rotate(45deg);
     }
 
-    &:after {
+    &::after {
       transform: translateY(-9px) rotate(-45deg);
     }
   }
